--- a/day1.boxmodel/style1.css
+++ b/day1.boxmodel/style1.css
@@ -1,12 +1,10 @@
 *{
    
-   background-color:aqua;
-
-   text-align: center;
-
+    background-color:aqua;
+   /* text-align: center; */
 }
 div{
-    align-content: center;
+    align-content:center;
     text-align:start;
         margin: 4% 13% 7% 13%;
         /* margin-bottom: 5%; */
@@ -14,7 +12,6 @@ div{
         /* border-left-width: 20%; */
     
     background-color: rgb(244, 97, 209);
-
 }
 .c{
     background-color: yellow;
@@ -23,7 +20,6 @@ div{
 }
 .p{
     background-color: blueviolet;
-
 }
 .b{
     background-color: chocolate;
@@ -31,18 +27,6 @@ div{
 span{
     font-size: x-large;
     color: rgb(191, 116, 24);
-    
-}
-.s1{
-    text-align: center;
-}
-.s2{
-    text-align: right;
-}
+    }
 
-/* }
-.r1{
-    text-align: right;
-    text-align: ;
-}
- */
+
