--- a/day1.boxmodel/style2.css
+++ b/day1.boxmodel/style2.css
@@ -1,8 +1,14 @@
 div {
     display: inline-block;
+    padding-left: 3%;
+    /* border-radius: 5% */
 }
 img{
-    width: 200px;
-    height: 130px;
-    
+    width: 240px;
+    height: 270px;
+    border-radius: 10%;
+    border:4px solid green;
+}
+h2{
+    text-align: center;
 }
