--- a/day1/style1.css
+++ b/day1/style1.css
@@ -1,6 +1,6 @@
 *{
    
-    background-color:aqua;
+    background-color:rgb(198, 238, 238);
     margin: 2% 10%; 
    /* text-align: center; */
 }
