--- a/day5/style1.css
+++ b/day5/style1.css
@@ -1,5 +1,5 @@
 body {
-    background-color: wheat;
+    background-color: rgb(245, 242, 242);
 }
 
 .maincontent{
@@ -11,7 +11,7 @@ body {
      margin-left: 15%;  
    }
 .container {
-  background-color:rgb(245, 241, 241);
+  background-color:white;
   border: 2px solid rgb(216, 211, 211);
   width: 22vw;
   border: none;
@@ -26,7 +26,7 @@ body {
 }
 
 img {
-  width: 90px;
+  width: 76px;
   height: 58px;
   cursor: pointer;
   padding-top: 5%;
